# tinyset

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml
.circleci/: config.yaml  config.yml
.github/workflows/: rust.yml
bench/: Cargo.toml
bench/src/: main.rs
benches/: bench.rs
ci/: script.sh
david_allocator/: Cargo.toml
david_allocator/src/: lib.rs
proptest-regressions/: setu32.txt
src/: anymap.rs  castset.rs  copyset.rs  lib.rs  map64.rs  optcastset.rs  rand.rs  set.rs  set64.rs  sets.rs  setu32.rs  setu32b.rs  setu64.rs  setusize.rs  tinymap.rs  tinyset.rs  u64set.rs  usizeset.rs  vecset.rs
src/setu32/: iter.rs
src/setu64/: iter.rs
tests/: issue-21.rs
