[package]
name = "tinyset"
version = "0.4.3"
authors = ["David Roundy <daveroundy@gmail.com>"]

description = "Size-optimized sets"
license = "MIT/Apache-2.0"
repository = "https://github.com/droundy/tinyset"
edition = "2018"

readme = "README.md"

[dev-dependencies]

quickcheck = "^0.4.1"
heapsize = "0.4.2"
proptest = "0.9.4"
easybench = { version = "1.0.0", git = "https://github.com/droundy/easybench-rs" }
stats_alloc = "0.1.8"

roaring = "0.6.0"
id-set = "0.2.2"

[badges]
travis-ci = { repository = "droundy/tinyset" }
appveyor = { repository = "droundy/tinyset" }

[dependencies]
rand = { version = "0.7.2", optional = true }
itertools = "0.8.1"

[features]

default = ["rand"]

[[bench]]
name = "bench"
harness = false
