[package]
name = "tinyset"
version = "0.4.13"
authors = ["David Roundy <daveroundy@gmail.com>"]
categories = ["data-structures"]
keywords = ["set", "small", "compact"]

description = "Size-optimized sets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/droundy/tinyset"
edition = "2018"

readme = "README.md"

[dev-dependencies]

quickcheck = "0.9"
heapsize = "0.4.2"
proptest = "0.10"
scaling = "0.1.3"
stats_alloc = "0.1.8"

roaring = "0.6.0"
id-set = "0.2.2"
serde_json = "1.0"

[dependencies]
rand = { version = "0.8.4", optional = true }
serde = { version = "1.0", optional = true }

[features]

default = ["rand"]

[[bench]]
name = "bench"
harness = false
